--- a/layout/session.liquid
+++ b/layout/session.liquid
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ locale }}" class="{{- settings.element_design -}}-design">
+<html lang="{{ locale }}">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
